my second commit

--- a/myproject/Untitled-1.html
+++ b/myproject/Untitled-1.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <p>this is the first commit</p>
-        <p>this is my second commit</p>
+        <p>the second</p>
     </body>
 </html>
